public/common.css
.comment {
    clear: left;
    padding-top: 5px;
    padding-bottom: 5px;
    width: 400px;
}
.comment .source_name {
    font-size: 11px;
    color: #888;
    padding-left: 5px;
}
.comment .created {
    float: right;
    color: #888;
}
.app .ratings h3 {
    text-align: left;
    padding-top: 10px;
}
body.user_key .single_app span.stars img {
    cursor: pointer;
}
span.stars img {
    width: 16px;
    height: 16px;
    background-image: url(/star_empty.png);
    vertical-align: top;
}
span.stars.star1 img.star1,
span.stars.star1_5 img.star1,
span.stars.star2 img.star1, span.stars.star2 img.star2,
span.stars.star2_5 img.star1, span.stars.star2_5 img.star2,
span.stars.star3 img.star1, span.stars.star3 img.star2, span.stars.star3 img.star3,
span.stars.star3_5 img.star1, span.stars.star3_5 img.star2, span.stars.star3_5 img.star3,
span.stars.star4 img.star1, span.stars.star4 img.star2, span.stars.star4 img.star3, span.stars.star4 img.star4,
span.stars.star4_5 img.star1, span.stars.star4_5 img.star2, span.stars.star4_5 img.star3, span.stars.star4_5 img.star4,
span.stars.star5 img.star1, span.stars.star5 img.star2, span.stars.star5 img.star3, span.stars.star5 img.star4, span.stars.star5 img.star5 {
    background-image: url(/star.png);
}
span.stars.star0_5 img.star1,
span.stars.star1_5 img.star2,
span.stars.star2_5 img.star3,
span.stars.star3_5 img.star4,
span.stars.star4_5 img.star5 {
    background-image: url(/star_half.png);
}
.rating {
    margin-bottom: 5px;
}
.rating .rating_summary {
    padding-top: 25px;
    float: left;
    color: #888;
}
.rating .rating_summary img {
    vertical-align: top;
}
.rating > div.voter {
    float: left;
}
.identity {
    float: right;
    vertical-align: bottom;
    height: 40px;
}
.identity > img {
    float: left;
    width: 30px;
    height: 30px;
    padding-top: 5px;
    padding-right: 5px;
}
.identity span, .identity a {
    display: block;
    float: left;
    padding-top: 10px;
}

.navbar .brand:hover {
  text-decoration: none;
  text-shadow: 0 0 0.4em #0088cc, 0 0 0.4em #0088cc, 0 0 0.4em #0088cc;
}
.navbar .brand {
  display: block;
  float: left;
  padding: 8px 20px 12px;
  margin-left: -20px;
  font-size: 20px;
  font-weight: 200;
  line-height: 1;
  color: #444 !important;
  text-shadow: 0 0 0.2em #0088CC, 0 0 0.2em #0088CC, 0 0 0.2em #0088CC;
}
.filters select {
  margin-right: 20px;
}
label.app {
  opacity: 0.5;
}
label.app.selected {
  opacity: 1.0;
}
#hero-desc .sub {
  font-size: 13px;
  line-height: 18px;
}
.form-horizontal {
  height: 25px;
}

